updated assignment 4 again

--- a/HTML-CSS-JS/Assignment 4 - API Retrieval/style.css
+++ b/HTML-CSS-JS/Assignment 4 - API Retrieval/style.css
@@ -1,12 +1,27 @@
 html{
-    background-image: url(images/poke-background.png)
+    margin: 0;
+    height: 100%;
+    size: auto;
+    background-image: url(images/poke-background.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
 }
+#titleimage{
+    max-width: 100%;
+    height: auto;
+}
+
 body{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    /* margin-top: 100px; */
+    margin: auto;
 }
 #pokedex{
     display: flex;
@@ -104,7 +119,7 @@ button:hover{
 button:active{
     transform: translateY(2px);
 }
-img{
+img.jump{
     animation-duration: 1.5s;
     animation-name: bounce;
 }
