--- a/MVC/Challenge-FriendsList/Challenge-FriendsList/Views/Friend/Index.cshtml
+++ b/MVC/Challenge-FriendsList/Challenge-FriendsList/Views/Friend/Index.cshtml
@@ -17,5 +17,11 @@
                 <a asp-action="editFriend" asp-route-id="@item.id">Update Friend</a>
             </div>
         </li>
+
     }
 </ul>
+
+    @section myCustomSection
+    {
+        <p>Here is your friends list. You are given options to see their info, update them, or remove them!</p>
+    }
