added SQL server to friendslist challenge

--- a/MVC/Challenge-FriendsList/Challenge-FriendsList/Views/Friend/Index.cshtml
+++ b/MVC/Challenge-FriendsList/Challenge-FriendsList/Views/Friend/Index.cshtml
@@ -2,6 +2,10 @@
 
 @model List<Friend>
 
+    @{
+        ViewData["Title"] = "My List of Friends";
+    }
+
 <a asp-action="InsertNewFriend">Add New</a>
 
 <ul class="friendslist">
