--- a/MVC/Challenge-FriendsList/Challenge-FriendsList/Views/Friend/InsertNewFriend.cshtml
+++ b/MVC/Challenge-FriendsList/Challenge-FriendsList/Views/Friend/InsertNewFriend.cshtml
@@ -4,11 +4,11 @@
         <h1>Add a Friend</h1>
         <form method="post" enctype="multipart/form-data" asp-action="InsertNewFriend">
             <div asp-validation-summary="All"></div>
-            <div class="form-field">
+            @*<div class="form-field">
                 <label asp-for="id"></label>
                 <input asp-for="id" />
                 <span asp-validation-for="id"></span>
-            </div>
+            </div>*@
             <div class="form-field">
                 <label asp-for="friendName"></label>
                 <input asp-for="friendName" />
